--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.preferIpAddress=true
+
+
+
+
